# resume_job_match_ai

./: .flake8  .gitignore  README.md  pyproject.toml
src/resume_job_match_ai/: crew.py  main.py
src/resume_job_match_ai/config/: agents.yaml  tasks.yaml
src/resume_job_match_ai/tools/: __init__.py  file_tools.py  pdf_tool_test.py  pdf_tools.py
